Set water physics. Slight change to player collision (still WIP). Allow caves to be set or not set with commented sections

--- a/assignment_package/forms/playerinfo.ui
+++ b/assignment_package/forms/playerinfo.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>403</width>
-    <height>344</height>
+    <height>398</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -250,6 +250,78 @@
     <rect>
      <x>120</x>
      <y>260</y>
+     <width>271</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>UNK</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>300</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>In Liquid?</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="liquidLabel">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>300</y>
+     <width>271</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>UNK</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>340</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>On Ground?</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="groundLabel">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>340</y>
      <width>271</width>
      <height>31</height>
     </rect>
