Begin postprocess effects for water and lava by creating a quadrangle over the whole screen

--- a/assignment_package/glsl.qrc
+++ b/assignment_package/glsl.qrc
@@ -5,5 +5,9 @@
         <file>glsl/flat.frag.glsl</file>
         <file>glsl/flat.vert.glsl</file>
         <file>glsl/instanced.vert.glsl</file>
+        <file>glsl/postWater.frag.glsl</file>
+        <file>glsl/postLava.frag.glsl</file>
+        <file>glsl/passthrough.vert.glsl</file>
+        <file>glsl/noOp.frag.glsl</file>
     </qresource>
 </RCC>
