--- a/assignment_package/forms/playerinfo.ui
+++ b/assignment_package/forms/playerinfo.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>403</width>
-    <height>423</height>
+    <height>460</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -358,6 +358,42 @@
     <rect>
      <x>120</x>
      <y>380</y>
+     <width>271</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>UNK</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>420</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Holding Block:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="holdingLabel">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>420</y>
      <width>271</width>
      <height>31</height>
     </rect>
