Attempt consolidating sky and lambert shaders

--- a/assignment_package/glsl.qrc
+++ b/assignment_package/glsl.qrc
@@ -13,5 +13,7 @@
         <file>glsl/hudPassthrough.vert.glsl</file>
         <file>glsl/sky.vert.glsl</file>
         <file>glsl/sky.frag.glsl</file>
+        <file>glsl/SkyTerrainUber.vert.glsl</file>
+        <file>glsl/SkyTerrainUber.frag.glsl</file>
     </qresource>
 </RCC>
