Add static clouds (TODO: make moving and update w/ terrain expansion), Add temporary fix to animatible block z fighting with below block

--- a/assignment_package/forms/inventory.ui
+++ b/assignment_package/forms/inventory.ui
@@ -88,6 +88,9 @@
     <property name="text">
      <string/>
     </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
    </widget>
   </widget>
   <widget class="QFrame" name="border_2">
