Add Nick NPC. Yet to add animation and collision

--- a/assignment_package/textures.qrc
+++ b/assignment_package/textures.qrc
@@ -11,5 +11,7 @@
         <file>textures/water_block.png</file>
         <file>textures/sand_block.png</file>
         <file>textures/blank.png</file>
+        <file>textures/Minecraft_Fandom_SteveTexture.jpg</file>
+        <file>textures/nick_texture.png</file>
     </qresource>
 </RCC>
