--- a/assignment_package/glsl.qrc
+++ b/assignment_package/glsl.qrc
@@ -15,5 +15,7 @@
         <file>glsl/sky.frag.glsl</file>
         <file>glsl/SkyTerrainUber.vert.glsl</file>
         <file>glsl/SkyTerrainUber.frag.glsl</file>
+        <file>glsl/cloud.frag.glsl</file>
+        <file>glsl/cloud.vert.glsl</file>
     </qresource>
 </RCC>
